 * fixed editor not being translatable
 * fixed Parandra missing in 'Heir to the Throne: The Elven Council' scenario
 * fixed king going to swimming on 'The Rise of Wesnoth: A Final Spring' scenario
 * fixed past-the-end issue on botched UTF-8 strings
 * fixed scroll_to_unit issues on 'The Rise of Wesnoth' campaign
 * workaround for Reiser4 feature bug (#10264)
 * workaround for BeOS gettext implementation
 * re-implemented enhanced sound quality fix
 * added error dialog when a campaign has corrupt WML
 * added better error messages for machines that cannot bind to local ports 
 * switched relevant flags from --enable-* to --with-* in autotools
 * autotools re-organizations for better BSD support
 * editor dependency cleanups
 * help system optimizations
 * village placement optimizations
 * compile speed optimizations
 * text rendering optimizations
 * squashed many compile warnings
 * code cleanups and refactoring
 
Version 0.8.3:
 * information about encountered terrain added in the help system
 * removed the unit description dialog in favor of in-game help
 * user interface tweaks
 * added damage taken and inflicted with expected values to statistics
 * new and improved graphics:
   * dwarvish castle
   * swamp, deep water, shallow water, snow, cave wall, cave floor, ice, lava, dirt, forest, bridge, road
   * chest, nest
   * portraits and unit animations
   * preferences icons
 * updates and enhancements to tutorial
 * scenario balancing for 'The Dark Hordes' campaign:
   * The Skull of Agarash
   * Underground Pool
 * new scenarios for 'The Eastern Invasion' campaign:
   * The Drowned Plains (replaces 'Peasant Revolt')
 * scenario balancing for 'The Eastern Invasion' campaign:
   * Captured
   * Evacuation
   * Weldyn Under Attack
 * new scenarios for 'The Rise of Wesnoth' campaign:
   * The Vanguard
   * Return of the Fleet
 * scenario balancing for 'The Rise of Wesnoth' campaign:
   * Temple in the Deep
 * replaced Duelist's pistol with crossbow