@@ -97,6 +97,7 @@ Version 0.8.4:
  * fixed king going to swimming on 'The Rise of Wesnoth: A Final Spring' scenario
  * fixed past-the-end issue on botched UTF-8 strings
  * fixed scroll_to_unit issues on 'The Rise of Wesnoth' campaign
+ * fixed build procedure to not require having gettext installed
  * workaround for Reiser4 feature bug (#10264)
  * workaround for BeOS gettext implementation
  * re-implemented enhanced sound quality fix
